feat: add error fallback webserver with custom error pages and deployment configuration
- Implemented a webserver to handle error responses with custom HTML pages for various HTTP errors (404, 500, 502, 503, 504).
- Added Dockerfile and docker-compose configuration for local development.
- Created Kubernetes deployment and service configuration for production deployment.
- Introduced a generator script to automate the creation of error pages.
- Updated README with instructions on running the service and generating pages.

--- a/.github/workflows/cla-assistant.yml
+++ b/.github/workflows/cla-assistant.yml
@@ -17,4 +17,4 @@ jobs:
     uses: ctfpilot/ci/.github/workflows/cla-assistant.yml@v1.3.0
     secrets: inherit
     with:
-      repository: <repository-name>
+      repository: error-fallback
