--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,27 +8,30 @@ on:
 
 jobs:
   release:
-    name: Release
-    uses: ctfpilot/ci/.github/workflows/release.yml@v1.3.0
     permissions:
       contents: write
       packages: write
       id-token: write
+    name: Release
+    uses: ctfpilot/ci/.github/workflows/release.yml@v1.3.0
     secrets:
       RELEASE_GH_TOKEN: ${{ secrets.RELEASE_GH_TOKEN }}
     with:
-      repository: ctfpilot/<repository-name>
+      repository: ctfpilot/error
       ENVIRONMENT: Release
 
-  update-develop:
-    if: github.ref == 'refs/heads/main'
-    name: "Update Develop Branch"
+  docker:
+    name: Docker build and push
     needs:
       - release
-    uses: ctfpilot/ci/.github/workflows/develop-update.yml@v1.3.0
+    uses: ctfpilot/ci/.github/workflows/docker.yml@v1.3.0
+    if: needs.release.outputs.version != '' && needs.release.outputs.version != null
     permissions:
       contents: read
-      pull-requests: write
-      issues: write
+      packages: write
+      id-token: write
     with:
-      repository: ctfpilot/<repository-name>
+      repository: ctfpilot/error
+      semver: ${{ needs.release.outputs.version }}
+      arguments: |
+        VERSION=${{ needs.release.outputs.version }}
