Correct minor errors in language and validation

--- a/template/k8s.yml
+++ b/template/k8s.yml
@@ -24,7 +24,7 @@ spec:
       enableServiceLinks: false
       automountServiceAccountToken: false
       containers:
-        - name: instancing-fallback
+        - name: error-fallback
           image: ctfpilot/error-fallback:{ .Version }
           imagePullPolicy: Always
           ports:
