--- a/template/k8s.yml
+++ b/template/k8s.yml
@@ -43,6 +43,12 @@ spec:
               port: 80
             initialDelaySeconds: 5
             periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 2
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
