--- a/template/k8s.yml
+++ b/template/k8s.yml
@@ -25,7 +25,7 @@ spec:
       automountServiceAccountToken: false
       containers:
         - name: error-fallback
-          image: ctfpilot/error-fallback:{ .Version }
+          image: ghcr.io/ctfpilot/error-fallback:{ .Version }
           imagePullPolicy: Always
           ports:
           - name:  http
